# LedArt

./: .gitignore  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  main.cpp
main/api/: api_server.cpp  api_server.h
main/octagon/: fiber.h  octagon.cpp  octagon.h  octagon_config.h
main/patterns/: gradual_shift.cpp  gradual_shift.h  pattern.h  solid_color.cpp  solid_color.h
main/wifi/: config_server.cpp  config_server.h  wifi_manager.cpp  wifi_manager.h
